add new background colour to the tab bar

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div style="background-color: #b1b4b6">
+<div style="background-color: #e6e5e3">
   <div class="govuk-width-container">
     <app-new-tabs (selectedTabClick)="tabClickEvent($event)" (viewTab)="handleTabChange($event)">
       <app-new-tab title="Home"></app-new-tab>
