--- a/src/app/shared/components/new-tabs/new-tabs.component.scss
+++ b/src/app/shared/components/new-tabs/new-tabs.component.scss
@@ -31,7 +31,7 @@ li {
   }
 
   &:focus {
-    outline: 4px solid govuk-colour('mid-grey');
-    background-color: govuk-colour('mid-grey');
+    outline: 4px solid #e6e5e3;
+    background-color: #e6e5e3;
   }
 }
