--- a/src/app/features/add-multiple-training/confirm-multiple-training/confirm-multiple-training.component.html
+++ b/src/app/features/add-multiple-training/confirm-multiple-training/confirm-multiple-training.component.html
@@ -1,8 +1,8 @@
 <div class="govuk-grid-row-two-thirds-from-desktop">
   <div class="govuk-grid-column">
     <div class="govuk-grid-row govuk-!-margin-left-0 govuk-margin-right-0">
-      <span class="govuk-caption-l">Add multiple records</span>
-      <h1 class="govuk-heading-xl">Summary</h1>
+      <span class="govuk-caption-m">Add multiple records</span>
+      <h1 class="govuk-heading-l">Summary</h1>
     </div>
     <div class="govuk-grid-row govuk-!-margin-left-0 govuk-!-margin-right-0">
       <div class="govuk-grid-column-one-half govuk-!-padding-0">
@@ -11,7 +11,7 @@
       <div class="govuk-grid-column">
         <button
           type="submit"
-          class="govuk-button govuk-util__float-right"
+          class="govuk-button govuk-util__float-right govuk-!-margin-bottom-4"
           data-testid="confirmButton"
           (click)="onSubmit()"
         >
