alter backend to retrieve the last updated training and qualifications for each worker, and then render that on the t and q tab

--- a/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
+++ b/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
@@ -3,6 +3,7 @@
   [workplace]="workplace"
   [workers]="workers"
   [totalRecords]="totalRecords"
+  [tAndQsLastUpdated]="tAndQsLastUpdated"
 ></app-training-link-panel>
 <ng-container *ngIf="workers && workers.length; else noStaffRecords">
   <div class="govuk-grid-row" *ngIf="totalRecords === 0" data-testid="noRecords">
