--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -34,6 +34,7 @@
           [workers]="workers"
           [workerCount]="workerCount"
           [trainingCounts]="trainingCounts"
+          [tAndQsLastUpdated]="tAndQsLastUpdated"
         ></app-training-and-qualifications-tab>
       </app-tab>
 
