--- a/src/app/features/add-multiple-training/confirm-multiple-training/confirm-multiple-training.component.html
+++ b/src/app/features/add-multiple-training/confirm-multiple-training/confirm-multiple-training.component.html
@@ -5,7 +5,7 @@
       <h1 class="govuk-heading-l">Summary</h1>
     </div>
     <div class="govuk-grid-row govuk-!-margin-left-0 govuk-!-margin-right-0">
-      <div class="govuk-grid-column-one-half govuk-!-padding-0 gobuk-!-margin-top-1">
+      <div class="govuk-grid-column-one-half govuk-!-padding-0 govuk-!-margin-top-1">
         <p>Check these details before you confirm them.</p>
       </div>
       <div class="govuk-grid-column">
