fix(preProdStaffRecordsSnaggingList): Added WDF routing for date of birth component and added tests for staff details page

--- a/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
+++ b/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
@@ -24,7 +24,7 @@
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
       <app-summary-record-change
         [explanationText]="' date of birth'"
-        [link]="getRoutePath('date-of-birth')"
+        [link]="getRoutePath('date-of-birth', wdfView)"
         [hasData]="!!worker.dateOfBirth"
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
