pass insideFlow boolean into workplace submit button component to prevent buttons changing when submitting

--- a/src/app/shared/directives/create-workplace/select-workplace/select-workplace.component.html
+++ b/src/app/shared/directives/create-workplace/select-workplace/select-workplace.component.html
@@ -50,7 +50,7 @@
         </p>
 
         <app-workplace-submit-button
-          [return]="!!return"
+          [return]="!insideFlow"
           (clicked)="setSubmitAction($event)"
         ></app-workplace-submit-button>
       </ng-container>
