fix the failing tests

--- a/src/app/shared/components/training-and-qualifications-categories/view-trainings/view-trainings.component.html
+++ b/src/app/shared/components/training-and-qualifications-categories/view-trainings/view-trainings.component.html
@@ -8,8 +8,8 @@
     </span>
   </div>
 </div>
-<table class="govuk-table">
-  <thead class="govuk-table__head">
+<table class="govuk-table" data-testid="userTable">
+  <thead class="govuk-table__head" data-testid="userTable-Heading">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="col">Name or ID number</th>
       <th class="govuk-table__header" scope="col">Job role</th>
