--- a/src/app/features/add-multiple-training/confirm-multiple-training/confirm-multiple-training.component.html
+++ b/src/app/features/add-multiple-training/confirm-multiple-training/confirm-multiple-training.component.html
@@ -20,9 +20,9 @@
       </div>
     </div>
     <div class="govuk-grid-row govuk-!-margin-left-0 govuk-!-margin-right-0 govuk-!-margin-bottom-6">
-      <span class="govuk-heading-m">Selected staff</span>
-      <div
-        class="govuk-summary-list--no-border asc-summarylist-border-top asc-summarylist-border-bottom govuk-!-width-full govuk-"
+      <h2 class="govuk-heading-m">Selected staff</h2>
+      <dl
+        class="govuk-summary-list govuk-summary-list--no-border asc-summarylist-border-top asc-summarylist-border-bottom govuk-!-width-full govuk-"
         data-testid="selectedStaffSummary"
       >
         <ng-container *ngFor="let worker of workers; index as i">
@@ -43,12 +43,12 @@
             </ng-container>
           </div>
         </ng-container>
-      </div>
+      </dl>
     </div>
     <div class="govuk-grid-row govuk-!-margin-left-0 govuk-!-margin-right-0">
-      <span class="govuk-heading-m">Training record details</span>
-      <div
-        class="govuk-summary-list--no-border asc-summarylist-border-top asc-summarylist-border-bottom govuk-!-width-full"
+      <h2 class="govuk-heading-m">Training record details</h2>
+      <dl
+        class="govuk-summary-list govuk-summary-list--no-border asc-summarylist-border-top asc-summarylist-border-bottom govuk-!-width-full"
       >
         <ng-container *ngFor="let record of trainingRecords; index as i">
           <div class="govuk-summary-list__row">
@@ -68,15 +68,7 @@
             </ng-container>
           </div>
         </ng-container>
-      </div>
+      </dl>
     </div>
-    <!-- <a
-        href="#"
-        *ngIf="existingMandatoryTrainings?.mandatoryTrainingCount > 0"
-        (click)="removeAllCategories($event)"
-        class="govuk-list govuk-list--inline"
-      >
-        Remove all training selections</a
-      > -->
   </div>
 </div>
