--- a/src/app/shared/components/staff-record-summary/employment/employment.component.html
+++ b/src/app/shared/components/staff-record-summary/employment/employment.component.html
@@ -33,7 +33,7 @@
           )
         "
         [explanationText]="' job start date'"
-        [link]="getRoutePath('main-job-start-date')"
+        [link]="getRoutePath('main-job-start-date', wdfView)"
         [hasData]="!!worker.mainJobStartDate"
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
@@ -48,7 +48,7 @@
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
       <app-summary-record-change
         [explanationText]="' approved mental health professional'"
-        [link]="getRoutePath('mental-health-professional')"
+        [link]="getRoutePath('mental-health-professional', wdfView)"
         [hasData]="!!worker.approvedMentalHealthWorker"
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
@@ -63,7 +63,7 @@
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
       <app-summary-record-change
         [explanationText]="' nursing and midwifery council category'"
-        [link]="getRoutePath('nursing-category')"
+        [link]="getRoutePath('nursing-category', wdfView)"
         [hasData]="!!worker.registeredNurse"
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
@@ -87,7 +87,7 @@
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
       <app-summary-record-change
         [explanationText]="' nursing and midwifery council category'"
-        [link]="getRoutePath('nursing-specialism')"
+        [link]="getRoutePath('nursing-specialism', wdfView)"
         [hasData]="!!worker.nurseSpecialisms"
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
@@ -112,7 +112,7 @@
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
       <app-summary-record-change
         [explanationText]="' recruited from'"
-        [link]="getRoutePath('recruited-from')"
+        [link]="getRoutePath('recruited-from', wdfView)"
         [hasData]="!!worker.recruitedFrom"
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
@@ -131,7 +131,7 @@
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
       <app-summary-record-change
         [explanationText]="' adult social care date'"
-        [link]="getRoutePath('adult-social-care-started')"
+        [link]="getRoutePath('adult-social-care-started', wdfView)"
         [hasData]="!!worker.socialCareStartDate"
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
@@ -167,7 +167,7 @@
           !(wdfView && worker.wdf?.daysSick.isEligible === 'Yes' && !worker.wdf?.daysSick.updatedSinceEffectiveDate)
         "
         [explanationText]="' days of sickness'"
-        [link]="getRoutePath('days-of-sickness')"
+        [link]="getRoutePath('days-of-sickness', wdfView)"
         [hasData]="!!worker.daysSick"
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
@@ -207,7 +207,7 @@
           )
         "
         [explanationText]="' contract with zero hours'"
-        [link]="getRoutePath('contract-with-zero-hours')"
+        [link]="getRoutePath('contract-with-zero-hours', wdfView)"
         [hasData]="!!worker.zeroHoursContract"
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
@@ -251,7 +251,7 @@
           )
         "
         [explanationText]="' average weekly working hours'"
-        [link]="getRoutePath('average-weekly-hours')"
+        [link]="getRoutePath('average-weekly-hours', wdfView)"
         [hasData]="
           !(
             worker.weeklyHoursAverage === null ||
@@ -300,7 +300,7 @@
           )
         "
         [explanationText]="' contracted weekly hours'"
-        [link]="getRoutePath('weekly-contracted-hours')"
+        [link]="getRoutePath('weekly-contracted-hours', wdfView)"
         [hasData]="
           !(
             worker.weeklyHoursContracted === null ||
@@ -346,7 +346,7 @@
           )
         "
         [explanationText]="' salary'"
-        [link]="getRoutePath('salary')"
+        [link]="getRoutePath('salary', wdfView)"
         [hasData]="!!worker.annualHourlyPay"
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
