--- a/src/app/features/wdf/wdf-data-change/wdf-staff-record/wdf-pagination/wdf-pagination.component.html
+++ b/src/app/features/wdf/wdf-data-change/wdf-staff-record/wdf-pagination/wdf-pagination.component.html
@@ -3,7 +3,7 @@
     <a
       *ngIf="!isFirst"
       class="asc-chevron-before govuk-button--link govuk-!-margin-top-3"
-      [routerLink]="'../' + previousID"
+      [routerLink]="['/wdf', 'staff-record', previousID]"
       [fragment]=""
       >Previous staff record</a
     >
@@ -12,7 +12,7 @@
     <a
       *ngIf="!isLast"
       class="asc-chevron-after govuk-button--link govuk-!-margin-top-3 margin-left-6"
-      [routerLink]="'../' + nextID"
+      [routerLink]="['/wdf', 'staff-record', nextID]"
       [fragment]=""
       >Next staff record</a
     >
