--- a/src/app/shared/components/training-link-panel/training-link-panel.component.html
+++ b/src/app/shared/components/training-link-panel/training-link-panel.component.html
@@ -3,7 +3,7 @@
     <div class="govuk-!-margin-bottom-8">
       <h2 class="govuk-heading-m govuk-!-margin-bottom-0">Training and qualifications ({{ totalRecords || 0 }})</h2>
       <p *ngIf="tAndQsLastUpdated" class="govuk-!-font-size-16 govuk-!-margin-top-2">
-        Last update, {{ tAndQsLastUpdated | date: 'dd MMMM yyyy' }}
+        Last update, {{ tAndQsLastUpdated | date: 'd MMMM yyyy' }}
       </p>
     </div>
   </div>
