--- a/src/app/shared/components/training-select-view-panel/training-select-view-panel.component.html
+++ b/src/app/shared/components/training-select-view-panel/training-select-view-panel.component.html
@@ -1,13 +1,13 @@
 <div class="asc-tabs asc-tabs--border-bottom govuk-!-margin-top-5 govuk-!-margin-bottom-5">
-  <ul class="asc-tabs__list" role="tablist">
+  <ul class="govuk-tabs__list asc-tabs__list" role="tablist">
     <li
-      class="asc-tabs__list-item"
+      class="govuk-tabs__list-item asc-tabs__list-item"
       data-testid="staffListItem"
       [class.asc-tabs__list-item--active]="!viewTrainingByCategory"
     >
       <a
-        id="tab_"
-        class="govuk-link govuk-link--no-visited-state asc-tabs__link"
+        id="tab_staff"
+        class="govuk-tabs__tab asc-tabs__link"
         [class.asc-tabs__link--active]="!viewTrainingByCategory"
         href="#"
         role="tab"
@@ -16,13 +16,13 @@
       >
     </li>
     <li
-      class="asc-tabs__list-item"
+      class="govuk-tabs__list-item asc-tabs__list-item"
       data-testid="trainingListItem"
       [class.asc-tabs__list-item--active]="viewTrainingByCategory"
     >
       <a
-        id="tab_"
-        class="govuk-link govuk-link--no-visited-state asc-tabs__link"
+        id="tab_training"
+        class="govuk-tabs__tab asc-tabs__link"
         [class.asc-tabs__link--active]="viewTrainingByCategory"
         href="#"
         role="tab"
