change available answers array to include a label and value property for each answer, write more tests

--- a/src/app/features/workers/mental-health-professional/mental-health-professional.component.html
+++ b/src/app/features/workers/mental-health-professional/mental-health-professional.component.html
@@ -20,10 +20,10 @@
                 id="approvedMentalHealthWorker-{{ idx }}"
                 name="approvedMentalHealthWorker"
                 type="radio"
-                [value]="answer"
+                [value]="answer.value"
               />
               <label class="govuk-label govuk-radios__label" for="approvedMentalHealthWorker-{{ idx }}">
-                {{ answer }}
+                {{ answer.label }}
               </label>
             </div>
           </div>
