--- a/src/app/features/delete-mandatory-training-category/delete-mandatory-training-category.component.html
+++ b/src/app/features/delete-mandatory-training-category/delete-mandatory-training-category.component.html
@@ -7,13 +7,13 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters govuk-!-margin-top-2">
     <p class="govuk-!-margin-bottom-7">
-      If you do this, 'communication skills' training will not be mandatory for any <br />
-      of your staff at the moment.
+      If you do this, {{ selectedCategory.category }} training will not be mandatory for any of your staff at the
+      moment.
     </p>
     <dl class="govuk-summary-list asc-summarylist-border-top">
       <div class="govuk-summary-list__row" scope="row">
         <dt class="govuk-summary-list__key govuk-!-width-one-half">Training category</dt>
-        <dd class="govuk-summary-list__value" data-testid="trainingCategory">Communication skills</dd>
+        <dd class="govuk-summary-list__value" data-testid="trainingCategory">{{ selectedCategory.category }}</dd>
       </div>
       <div class="govuk-summary-list__row" scope="row">
         <dt class="govuk-summary-list__key">Job roles</dt>
@@ -22,7 +22,11 @@
     </dl>
 
     <ng-container>
-      <button type="submit" class="govuk-button govuk-!-margin-right-9 govuk-!-margin-top-5 govuk-button--warning">
+      <button
+        type="submit"
+        (click)="onDelete()"
+        class="govuk-button govuk-!-margin-right-9 govuk-!-margin-top-5 govuk-button--warning"
+      >
         Remove category
       </button>
 
