fix(preProdStaffRecordsSnaggingList): Moved WDF staff record to be behind new urls appropriatley

--- a/src/app/features/wdf/wdf-data-change/wdf-staff-record/wdf-pagination/wdf-pagination.component.html
+++ b/src/app/features/wdf/wdf-data-change/wdf-staff-record/wdf-pagination/wdf-pagination.component.html
@@ -3,7 +3,11 @@
     <a
       *ngIf="!isFirst"
       class="asc-chevron-before govuk-button--link govuk-!-margin-top-3"
-      [routerLink]="['/wdf', 'staff-record', previousID]"
+      [routerLink]="
+        this.route.snapshot.params.establishmentuid
+          ? ['/wdf', 'workplaces', workplaceUid, 'staff-record', previousID]
+          : ['/wdf', 'staff-record', previousID]
+      "
       [fragment]=""
       >Previous staff record</a
     >
@@ -12,7 +16,11 @@
     <a
       *ngIf="!isLast"
       class="asc-chevron-after govuk-button--link govuk-!-margin-top-3 margin-left-6"
-      [routerLink]="['/wdf', 'staff-record', nextID]"
+      [routerLink]="
+        this.route.snapshot.params.establishmentuid
+          ? ['/wdf', 'workplaces', workplaceUid, 'staff-record', nextID]
+          : ['/wdf', 'staff-record', nextID]
+      "
       [fragment]=""
       >Next staff record</a
     >
