--- a/src/app/features/wdf/wdf-data-change/wdf-staff-record/wdf-staff-record.component.html
+++ b/src/app/features/wdf/wdf-data-change/wdf-staff-record/wdf-staff-record.component.html
@@ -39,7 +39,7 @@
       >
     </div>
     <div class="govuk-grid-column-one-half">
-      <app-wdf-pagination [workerList]="workerList"></app-wdf-pagination>
+      <app-wdf-pagination [workplaceUid]="workplaceUid" [workerList]="workerList"></app-wdf-pagination>
     </div>
   </div>
 </ng-container>
