Delete mandatory training category tests added and Cancel link functionality added

--- a/src/app/features/delete-mandatory-training-category/delete-mandatory-training-category.component.html
+++ b/src/app/features/delete-mandatory-training-category/delete-mandatory-training-category.component.html
@@ -7,7 +7,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters govuk-!-margin-top-2">
     <p class="govuk-!-margin-bottom-7">
-      If you do this, {{ selectedCategory.category }} training will not be mandatory for any of your staff at the
+      If you do this, '{{ selectedCategory.category }}' training will not be mandatory for any of your staff at the
       moment.
     </p>
     <dl class="govuk-summary-list asc-summarylist-border-top">
@@ -31,7 +31,9 @@
       </button>
 
       <span class="govuk-visually-hidden">or</span>
-      <a class="govuk-button govuk-button--link govuk-!-margin-left-9 govuk-!-margin-top-5">Cancel</a>
+      <a class="govuk-button govuk-button--link govuk-!-margin-left-9 govuk-!-margin-top-5" (click)="onCancel()"
+        >Cancel</a
+      >
     </ng-container>
   </div>
 </div>
