Text change in delete-mandatory-tarining-category

--- a/src/app/features/delete-mandatory-training-category/delete-mandatory-training-category.component.html
+++ b/src/app/features/delete-mandatory-training-category/delete-mandatory-training-category.component.html
@@ -7,7 +7,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters govuk-!-margin-top-2">
     <p class="govuk-!-margin-bottom-7">
-      If you do this, '{{ selectedCategory.category }}' training will not be mandatory for any of your staff at the
+      If you do this, '{{ selectedCategory.category | lowercase }}' will not be mandatory for any of your staff at the
       moment.
     </p>
     <dl class="govuk-summary-list asc-summarylist-border-top">
