--- a/src/app/shared/components/training-and-qualifications-categories/view-trainings/view-trainings.component.html
+++ b/src/app/shared/components/training-and-qualifications-categories/view-trainings/view-trainings.component.html
@@ -1,7 +1,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <span class="govuk-caption-xl"> Training category </span>
-    <span data-testid="workerNameAndRole" *ngIf="category">
+    <span *ngIf="category">
       <h1 class="govuk-heading-l govuk-!-margin-bottom-8">
         {{ category.category }}
       </h1>
@@ -77,7 +77,7 @@
         <td class="govuk-table__cell">
           <div *ngIf="trainingStatus(training) === trainingStatusService.MISSING && canEditWorker">
             <app-missing-mandatory-training
-              [missingRecord]="trainingCategory"
+              [missingRecord]="category"
               [training]="training"
               [canEditWorker]="canEditWorker"
             ></app-missing-mandatory-training>
