Add functionality to sort training records by status

--- a/src/app/features/workers/new-training-qualifications-record/missing-mandatory-training/missing-mandatory-training.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/missing-mandatory-training/missing-mandatory-training.component.html
@@ -8,7 +8,7 @@
       '/workplace',
       this.workplace.uid,
       'training-and-qualifications-record',
-      training.worker.uid,
+      training.uid,
       'add-training'
     ]"
     [state]="{ training: 'mandatory', missingRecord: this.missingRecord }"
