--- a/src/app/shared/components/training-link-panel/training-link-panel.component.html
+++ b/src/app/shared/components/training-link-panel/training-link-panel.component.html
@@ -1,13 +1,13 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <div class="govuk-!-margin-bottom-8">
+    <div class="govuk-!-margin-bottom-7">
       <h2 class="govuk-heading-m govuk-!-margin-bottom-0">Training and qualifications ({{ totalRecords || 0 }})</h2>
       <p *ngIf="tAndQsLastUpdated" class="govuk-!-font-size-16 govuk-!-margin-top-2">
         Last update, {{ tAndQsLastUpdated | date: 'd MMMM yyyy' }}
       </p>
     </div>
   </div>
-  <div class="govuk-grid-column-one-third govuk-!-padding-right-0 govuk">
+  <div *ngIf="workers && workers.length" class="govuk-grid-column-one-third govuk-!-padding-right-0 govuk">
     <div class="govuk-!-margin-bottom-8">
       <a
         class="govuk-list govuk-list--inline govuk-list govuk__flex govuk__align-items-center"
@@ -37,7 +37,7 @@
   </div>
 </div>
 
-<div class="govuk-grid-row">
+<div *ngIf="workers && workers.length" class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <ng-container *ngIf="canEditEstablishment">
       <div class="govuk-!-margin-bottom-4">
