--- a/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
@@ -11,7 +11,7 @@
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th class="govuk-table__header govuk-!-width-one-third" scope="col" style="width: 30%">Training name</th>
-          <th class="govuk-table__header" scope="col" style="width: 12%">Accredited</th>
+          <th class="govuk-table__header" scope="col">Accredited</th>
           <th class="govuk-table__header" scope="col" style="width: 20%">Completion date</th>
           <th class="govuk-table__header" scope="col" style="width: 18%">Expiry date</th>
           <th class="govuk-table__header" scope="col" style="width: 20%">Status</th>
