--- a/src/app/shared/components/training-and-qualifications-categories/view-trainings/view-trainings.component.html
+++ b/src/app/shared/components/training-and-qualifications-categories/view-trainings/view-trainings.component.html
@@ -4,6 +4,7 @@
     <span *ngIf="category">
       <h1 class="govuk-heading-l govuk-!-margin-bottom-8">
         {{ category.category }}
+        <p>testing LGTM on automatic pull requests</p>
       </h1>
     </span>
   </div>
