--- a/src/app/shared/directives/add-edit-training/add-edit-training.component.html
+++ b/src/app/shared/directives/add-edit-training/add-edit-training.component.html
@@ -192,7 +192,7 @@
       class="govuk-button govuk-button--link govuk-!-margin-left-9"
       role="button"
       draggable="false"
-      (click)="onCancel()"
+      (click)="onCancel($event)"
     >
       Cancel
     </a>
